[tool.poetry]
name = "graphviz-test"
version = "0.1.0"
description = ""
authors = ["KauanIzidoro <cnttbussineskauan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
